# ligue1_team_travel_emissions

./: .gitignore  CITATION.cff  Calculate_emissions.py  LICENSE  README.md  pyproject.toml
Plane calculation/: Final.py  Fuel consumption plane.xlsx  Get-airports.py  Get-distance-fuel.py  emission_carbone_match.csv  emission_carbone_team.csv  flight_emissions.csv  loc_airport.csv  localisation_stade.csv  master.py  to_delete.py
Train calculation/: Calculate-clean-transport.py
backend/: __init__.py  global_variables.py
backend/additional_analysis/: compute_erj145_co2_factor.ipynb
backend/data/Historic_travels/: Déplacement-mode.xlsx
backend/data/calculated_travels/: emissions_per_scenario_per_team_per_transport_type.csv  road_distance_cache.csv  three_days_train_emissions.csv  total_emissions.csv  total_emmissions.csv
backend/services/: README.md  base_transport_service.py  car_service.py  plane_service.py  train_service.py  utils.py
scripts/: Calculate_emissions.py  __init__.py  compute_emissions_scenarios.ipynb  retrieve_trajets.py  utils_scenarios.py
